--- a/identifier/identifier.css
+++ b/identifier/identifier.css
@@ -68,11 +68,20 @@ body {
   font-size: 30px;
 }
 
+.name.gold {
+  color: red;
+  text-decoration: underline;
+}
+
 .organization {
   padding-top: 3px;
   margin: auto;
   text-align: center;
   font-size: 18px;
+}
+
+.organization.gold {
+  font-weight: bold;
 }
 
 .zosia_logo {
