--- a/templates/schedule/schedule_template.html
+++ b/templates/schedule/schedule_template.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="../schedule/schedule.css" rel="stylesheet">
+    <link href="schedule.css" rel="stylesheet">
     <title>Schedule</title>
     <meta name="description" content="Schedule">
   </head>
