--- a/templates/identifier/identifier.css
+++ b/templates/identifier/identifier.css
@@ -1,4 +1,3 @@
-
 @page {
   size: 100mm 180mm;
   marks: crop;
@@ -37,7 +36,7 @@ body {
 }
 
 .meals {
-  display:flex;
+  display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: stretch;
@@ -53,7 +52,7 @@ body {
 }
 
 .meals .spacer {
-  width: 20mm;
+  width: 33%;
 }
 
 .meals .column .spacer {
@@ -61,15 +60,23 @@ body {
 }
 
 .name {
-  padding-top: 10px;
+  padding-top: 0.1cm;
   margin: auto;
   text-align: center;
   line-height: 78%;
-  font-size: 30px;
+  font-size: 25px;
+}
+
+.name_placeholder {
+  padding-top: 1cm;
+  text-align: center;
+  font-size: 10px;
+  border-width: 0 0 1px 0;
+  border-style: dotted;
 }
 
 .name.gold {
-  color: red;
+  color: green;
   text-decoration: underline;
 }
 
@@ -78,14 +85,25 @@ body {
   margin: auto;
   text-align: center;
   font-size: 14px;
+  color: grey;
+}
+
+.organization_placeholder {
+  margin-bottom: 0.5cm;
 }
 
 .organization.gold {
   font-weight: bold;
+  color: black;
 }
 
+.organization.silver {
+  color: black;
+}
+
+
 .zosia_logo {
-  margin-top: 3mm;
+  margin-top: 2mm;
 }
 
 .flip {
@@ -93,13 +111,13 @@ body {
 }
 
 img {
-  max-width:100%;
-  max-height:100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .meal_ticket {
   border-style: dashed;
-  border-width: 1px 0px;
+  border-width: 1px 0 0 0;
   border-collapse: collapse;
   height: 15mm;
 }
@@ -111,7 +129,8 @@ img {
 }
 
 .caption {
-
+  font-size: 1em;
+  color: darkslategray;
 }
 
 .date {
