--- a/templates/book/book_template.html
+++ b/templates/book/book_template.html
@@ -88,7 +88,7 @@
     {% for d in days %}
     <div class="abstract_day">
       {% for e in d.events %}
-      {% if e.type == "LECTURE" %}
+      {% if e.type == "lecture" %}
       <div class="abstract">
         {% if e.sponsored %}
         {% if e.sponsored == "silver" or e.sponsored == "gold" %}
