Add support for separate paragraphs in lectures; Support Windows new lines

--- a/templates/book/book_template.html
+++ b/templates/book/book_template.html
@@ -121,8 +121,8 @@
           </em>
         </div>
         <div class="body">
-          {% for p in e.abstract %}
-          <p> {{ p }} </p>
+          {% for paragraph in e.abstract %}
+          <p> {{ paragraph }} </p>
           {% endfor %}
         </div>
       </div>
